<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fga.mds.gpp.dojotestapplication.Controller.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrasou_viado"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:visibility="gone"
        android:id="@+id/main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/nome"
        android:id="@+id/name_edit_text"/>

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/idade"
        android:inputType="number"
        android:id="@+id/age_edit_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/age_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/chama"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:id="@+id/submit_button"/>

</android.support.constraint.ConstraintLayout>
