<resources>
    <string name="app_name">DojoTestApplication</string>

    <string name="maxNameErrorMessage">Digite um nome de até 50 caracteres</string>
    <string name="emptyNameErrorMessage">O nome não pode ser vazio</string>
    <string name="emptyAgeErrorMessage">A idade não pode ser vazia</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="chama">CHAMA!</string>
    <string name="arrasou_viado">Arrasou viado</string>
</resources>
